--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,29 @@
 # Site settings
-title: BY Blog
-SEOTitle: 柏荧的博客 | BY Blog
+title: Mzhang Blog
+SEOTitle: 张明的博客 | BY Blog
 header-img: img/post-bg-rwd.jpg
-email: qiubaiying@gmail.com
-description: "每个胜利背后都有许多尝试"
-keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
-url: "https://qiubaiying.github.io"          # your host, for absolute URL
+email: 2306691335@qq.com
+description: "to be or not to be that is a question"
+keyword: "Mzhang, Mzhang Blog, 张明的博客, 张明, zhangming, iOS, Apple, iPhone,产品经理"
+url: "https://flyready.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "下决定的那一刻永远不会迟"
 sidebar-avatar: img/avatar-by.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
 # SNS settings
 RSS: false
-# weibo_username:     qiubaiying
-zhihu_username:     qiubaiying
-github_username:    qiubaiying
-facebook_username:  baiying.qiu.7
-jianshu_username:   e71990ada2fd
-#twitter_username:   qiubaiying
+# weibo_username:     flyready
+zhihu_username:     flyready
+github_username:    flyready
+facebook_username:  flyready
+jianshu_username:   flyready
+#twitter_username:   flyready
 
 
 
